Fixed all warnings and errors in project